# hspec

./: cabal.project  flake.nix
hspec-core/: hspec-core.cabal  package.yaml
hspec-discover/example/: example.cabal
wtf/: CHANGELOG.md  wtf.cabal
wtf/app/: Main.hs
