cabal-version:      2.4
name:               wtf
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         jadel@mercury.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

test-suite spec
  build-tool-depends: hspec-discover:hspec-discover
  default-language: Haskell2010
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
    .
    ../src
    ../hspec-core/src
    ../hspec-core/vendor
  main-is:
      app/Main.hs
  build-depends:
      base    == 4.*
    , hspec-meta
    , QuickCheck
    , HUnit ==1.6.*
    , QuickCheck >=2.13.1
    , ansi-terminal >=0.6.2
    , array
    , base >=4.5.0.0 && <5
    , call-stack >=0.2.0
    , clock >=0.7.1
    , deepseq
    , directory
    , filepath
    , hspec-expectations ==0.8.2.*
    , quickcheck-io >=0.2.0
    , random
    , setenv
    , tf-random
    , transformers >=0.2.2.0
    , ghc
    , ghc-boot-th
    , stm >= 2.2
